tests/ui/unique_fields_private.stderr
error[E0616]: field `email` of struct `Profile` is private
  --> tests/ui/unique_fields_private.rs:16:17
   |
16 | #[derive(Debug, Validate)]
   |                 ^^^^^^^^ private field
   |
   = note: this error originates in the derive macro `Validate` (in Nightly builds, run with -Z macro-backtrace for more info)
